# pure-magician

./: default.nix  pure-magician.cabal
src/Pure/: Magician.hs
src/Pure/Magician/: Client.hs  Resources.hs  Server.hs
src/Pure/Magician/Client/: Config.hs  Restore.hs
src/Pure/Magician/Server/: Analytics.hs  Cache.hs  Config.hs  Limit.hs  Listen.hs  Serve.hs  Static.hs
