name:              pure-magician
version:           0.8.0.0
homepage:          purehs.org/doc/pure-magician
author:            Sean Hickman
maintainer:        sean@grumply.com
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

source-repository head
  type: git
  location: https://github.com/grumply/pure-magician.git

library
  hs-source-dirs:
      src

  build-depends:
      base
    , pure-auth
    , pure-conjurer
    , pure-convoker
    , pure-core
    , pure-elm
    , pure-hooks
    , pure-json
    , pure-maybe
    , pure-router
    , pure-sorcerer
    , pure-txt
    , pure-websocket
    , pure-websocket-cache
    , hashable

  exposed-modules:
    Pure.Magician.Resources
    Pure.Magician.Client
    Pure.Magician.Client.Restore

  if !(impl(ghcjs))

    build-depends:
        pure-server
      , yaml

    exposed-modules:
      Pure.Magician.Server
      Pure.Magician.Server.Analytics
      Pure.Magician.Server.Cache
      Pure.Magician.Server.Config
      Pure.Magician.Server.Listen
      Pure.Magician.Server.Serve
      Pure.Magician.Server.Static

  default-language: Haskell2010

  default-extensions:
    DerivingStrategies
    TypeFamilies
    FlexibleContexts
    UndecidableInstances
    DeriveGeneric
    DeriveAnyClass
    FlexibleInstances
    TemplateHaskell
    AllowAmbiguousTypes
    RankNTypes
    DataKinds
    PartialTypeSignatures
    TypeApplications
    ScopedTypeVariables
    DuplicateRecordFields
    StandaloneDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    RecordWildCards
    PatternSynonyms
    BlockArguments
    LambdaCase
    CPP
    DerivingVia
    OverloadedStrings
    DefaultSignatures
    TypeOperators
    InstanceSigs
    ExistentialQuantification
    RoleAnnotations
    FunctionalDependencies
    ViewPatterns
    BangPatterns
    PolyKinds